--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "discord.js": "^14.23.2",
-    "dotenv": "^17.2.3"
-  },
-  "devDependencies": {}
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
+  }
 }
